fix: wrap skills

--- a/style.css
+++ b/style.css
@@ -189,15 +189,16 @@ input[type="radio"].visually-hidden {
 .skills__list{
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   padding: 0;
 
   list-style: none;
 }
 
 .skills__item{
-  margin: 0 10px;
+  margin: 10px 10px;
 
-  padding: 3px;
+  padding: 5px;
   border: 2px solid rgba(0, 0, 0, 0.3);
   border-radius: 5px;
 }
